// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should print help message 1`] = `
"
Usage: contentful <cmd> [args]

Commands:
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  feedback      Send feedback to Contentful
  init          Get started with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  merge         A CLI version of the Merge app
  organization  Manage and list your organizations
  space         Manage and list your spaces
  sync          Sync a space between Contentful regions

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2025 Contentful"
`;

exports[`should print help message on shortcut 1`] = `
"
Usage: contentful <cmd> [args]

Commands:
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  feedback      Send feedback to Contentful
  init          Get started with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  merge         A CLI version of the Merge app
  organization  Manage and list your organizations
  space         Manage and list your spaces
  sync          Sync a space between Contentful regions

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2025 Contentful"
`;

exports[`should print help message on wrong subcommand 1`] = `
"
Usage: contentful <cmd> [args]

Commands:
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  feedback      Send feedback to Contentful
  init          Get started with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  merge         A CLI version of the Merge app
  organization  Manage and list your organizations
  space         Manage and list your spaces
  sync          Sync a space between Contentful regions

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2025 Contentful
Please specify a command."
`;

exports[`should return code 1 when errors exist no args 1`] = `
"
Usage: contentful <cmd> [args]

Commands:
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  feedback      Send feedback to Contentful
  init          Get started with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  merge         A CLI version of the Merge app
  organization  Manage and list your organizations
  space         Manage and list your spaces
  sync          Sync a space between Contentful regions

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2025 Contentful
Please specify a command."
`;
